--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ h4 {
 }
 .about img {
     height: auto;
-    width: 450px;
+    width: 420px;
     border-radius: 30px;
 }
 .about-text {
@@ -159,6 +159,62 @@ button {
     transition: .4s;
 }
 button:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+/* Skills */
+.skill {
+    background: rgb(100, 95, 95);
+    width: 100%;
+    padding: 100px 0px;
+}
+.title h2 {
+    color: beige;
+    font-size: 50px;
+    width: 1130px;
+    margin: 30px auto;
+    text-align: center;
+}
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+}
+.card {
+    height: 360px;
+    width: 330px;
+    padding: 20px 35px;
+    background: dimgray;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+h5 {
+    color: white;
+    font-size: 23px;
+    margin-bottom: 15px;
+}
+.text p {
+    color: whitesmoke;
+    font-size: 16px;
+    line-height: 27px;
+    margin-bottom: 25px;
+}
+.card .button {background-color: black;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 9px 22px;
+    border-radius: 30px;
+    transition: .4s;
+}
+.card .button:hover {
     background-color: white;
     color: black;
     cursor: pointer;
