--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,13 @@ button:hover {
     overflow: hidden;
     text-align: center;
 }
+.card i {
+    font-size: 50px;
+    display: block;
+    text-align: center;
+    margin: 25px 0px;
+    color: rgb(87, 92, 92);
+}
 h5 {
     color: white;
     font-size: 23px;
@@ -218,4 +225,83 @@ h5 {
     background-color: white;
     color: black;
     cursor: pointer;
+}
+
+/* Contact */
+.contact {
+    width: 100%;
+    height: 300px;
+    background: rgb(87, 92, 92);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.details h4 {
+    color: beige;
+    font-size: 45px;
+    width: 1130px;
+    margin: 30px auto;
+    text-align: center;
+    padding-bottom: 20px;
+}
+.details p {
+    color: white;
+    font-weight: bold;
+    letter-spacing: 1px;
+    line-height: 2px;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+/* Footer */
+footer {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    background: rgb(58, 61, 61);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer p:nth-child(1) {
+    font-size: 30px;
+    color: white;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+footer p:nth-child(2) {
+    color: white;
+    font-size: 17px;
+    width: 500px;
+    text-align: center;
+    line-height: 25px;
+}
+.social {
+    display: flex;
+}
+.social a {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black;
+    border-radius: 50%;
+    margin: 20px 10px;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+.social a:hover {
+    transform: scale(1.3);
+    transition: .3s;
+}
+.end {
+    position: absolute;
+    color: black;
+    bottom: 35px;
+    font-size: 14px;
 }
