--- a/styles.css
+++ b/styles.css
@@ -4,59 +4,53 @@
     font-family: sans-serif;
     box-sizing: border-box;
 }
-
-.header {
-    height: 100vh;
-    width: 100%;
-    background-image: url(./images/bg.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+a {
+    text-decoration: none;
 }
-nav {
+ul {
+    list-style: none;
+}
+.active {
+    color: black;
+    text-decoration: underline;
+    font-weight: bold;
+}
+body , html {
+    overflow-x: hidden;
+}
+.navbar h1 {
+    color: white;
+}
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 20px;
+    color: whitesmoke;
+}
+.nav-links {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-right: 8%;
 }
-.logo {
-    color: beige;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
+.nav-links li {
+    margin: 0 30px;
 }
-span {
-    color: black;
+
+.nav-links li a {
+    color: whitesmoke;
 }
-nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px 25px;
-}
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: capitalize;
-}
-nav ul li a:hover {
-    color: black;
-    transition: .4s;
-}
-.btn {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 10px 25px;
-    border-radius: 30px;
-    transition: transform .4s;
-}
-.btn:hover {
-    transform: scale(1.2);
+header {
+    width: 100vw;
+    height: 100vh;
+    background-image: url(./images/bg\ 6.jpg);
+    background-position: bottom;
+    background-size: cover;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 .content {
     position: absolute;
@@ -67,241 +61,198 @@ nav ul li a:hover {
 h1 {
     color: beige;
     margin: 20px 0px 20px;
-    font-size: 75px;
+    font-size: 6vmin;
+    letter-spacing: 1px;
 }
 h3 {
     color: beige;
     font-size: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 7vmin;
+    letter-spacing: 1px;
 }
 h4 {
     color: white;
     letter-spacing: 2px;
     font-size: 20px;
+    letter-spacing: 2px;
 }
-.newsletter form {
-    width: 380px;
-    max-width: 100%;
-    position: relative;
+span {
+    color: black;
 }
-.newsletter form input:first-child {
-    display: inline-block;
-    width: 100%;
-    padding: 14px 100px 14px 14px;
-    border: 2px solid black;
-    outline: none;
+.line {
+    width: 180px;
+    height: 4px;
+    background: black;
+    margin: 10px auto;
+    border-radius: 5px;
+}
+.ctn {
+    padding: 12px 16px;
+    background: black;
     border-radius: 30px;
-}
-.newsletter form input:last-child {
-    position: absolute;
-    display: inline-block;
-    outline: none;
-    border: none;
-    padding: 10px 30px;
-    border-radius: 30px;
-    background-color: black;
     color: white;
-    box-shadow: 0px 0px 5px #FFF, 0px 0px 15px rgb(139, 118, 118);
-    top: 6px;
-    right: 6px;
+}
+.menu-button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    cursor: pointer;
+    display: none;
 }
 
 /* About */
-.about {
+section {
+    background-color: whitesmoke;
     width: 100%;
-    padding: 100px 0px;
-    background-color: dimgray;
+    padding: 100px 0;
 }
-.about img {
-    height: auto;
-    width: 420px;
-    border-radius: 30px;
+.title  {
+    text-align: center;
+    font-size: 4vmin;
+    color: black;
 }
-.about-text {
-    width: 550px; 
-}
-.main {
-    width: 1130px;
-    max-width: 95%;
-    margin: 0 auto;
+.row {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    width: 80%;
+    justify-content: space-between;
+    padding: 30px;
 }
-.about-text h2 {
-    color: beige;
-    font-size: 50px;
-    text-transform: capitalize;
-    margin-bottom: 20px;
+.row .column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.about-text h5 {
-    color: beige;
-    letter-spacing: 2px;
-    font-size: 24px;
-    margin-bottom: 25px;
-    text-transform: capitalize;
+.row .column img {
+    height: auto;
+    width: 450px;
+    border-radius: 15px;
 }
-.about-text p {
-    color: whitesmoke;
-    letter-spacing: 1px;
-    line-height: 28px;
-    font-size: 18px;
-    margin-bottom: 40px;
+.about .row {
+    margin-top: 50px;
 }
-button {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 13px 30px;
-    border-radius: 30px;
-    transition: .4s;
-}
-button:hover {
-    background-color: white;
+p {
     color: black;
-    cursor: pointer;
+    letter-spacing: 2px;
+    line-height: 30px;
+    font-size: 18px;
+    padding: 0px 40px;
+}
+.about .ctn {
+    font-size: 20px;
+    padding: 10px 14px;
+    margin-top: 30px;
 }
 
-/* Skills */
-.skill {
-    background: rgb(100, 95, 95);
+/* Sevices */
+.service {
+    background: white;
     width: 100%;
     padding: 100px 0px;
 }
-.title h2 {
-    color: beige;
-    font-size: 50px;
-    width: 1130px;
-    margin: 30px auto;
-    text-align: center;
-}
 .box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 400px;
-}
-.card {
-    height: 360px;
-    width: 330px;
-    padding: 20px 35px;
-    background: dimgray;
-    border-radius: 20px;
-    margin: 15px;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-}
-.card i {
-    font-size: 50px;
-    display: block;
-    text-align: center;
-    margin: 25px 0px;
-    color: rgb(87, 92, 92);
-}
-h5 {
-    color: white;
-    font-size: 23px;
-    margin-bottom: 15px;
-}
-.text p {
-    color: whitesmoke;
-    font-size: 16px;
-    line-height: 27px;
-    margin-bottom: 25px;
-}
-.card .button {background-color: black;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 9px 22px;
-    border-radius: 30px;
-    transition: .4s;
-}
-.card .button:hover {
-    background-color: white;
     color: black;
-    cursor: pointer;
+    font-size: 4vmin;
+    text-align: center;
+}
+.service .row {
+    justify-content: space-around;
+}
+.service .column {
+    justify-content: space-around;
+    background: rgb(204, 187, 165);
+    padding: 25px 24px;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    gap: 15px;
+    margin: 12px;
+}
+.service h4 {
+    color: black;
+    font-weight: bold;
+    text-decoration: underline;
+    letter-spacing: 5px;
 }
 
 /* Contact */
 .contact {
+    background-color: cornsilk;
     width: 100%;
-    height: 300px;
-    background: rgb(87, 92, 92);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+    padding: 100px 0;
 }
-.details h4 {
-    color: beige;
-    font-size: 45px;
-    width: 1130px;
-    margin: 30px auto;
-    text-align: center;
-    padding-bottom: 20px;
-}
-.details p {
-    color: white;
-    font-weight: bold;
-    letter-spacing: 1px;
-    line-height: 2px;
-    font-size: 18px;
-    text-align: center;
-    margin-bottom: 40px;
+.social-image {
+    border: circle;
+    
 }
 
 /* Footer */
-footer {
-    position: relative;
+.footer {
     width: 100%;
-    height: 350px;
-    background: rgb(58, 61, 61);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-footer p:nth-child(1) {
-    font-size: 30px;
-    color: white;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-footer p:nth-child(2) {
-    color: white;
-    font-size: 17px;
-    width: 500px;
+    min-height: 100px;
+    padding: 20px 80px;
+    margin: 0;
+    background: #484872;
     text-align: center;
-    line-height: 25px;
 }
-.social {
-    display: flex;
+.footer p {
+    color: whitesmoke;
+    margin: 20px auto;
 }
-.social a {
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: black;
-    border-radius: 50%;
-    margin: 20px 10px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
+
+@media only screen and (max-width:850px) {
+    .menu-button {
+        display: block;
+    }
+    .navbar {
+        padding: 0;
+    }
+    .logo {
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .nav-links {
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        background: #484872;
+        margin-top: -900px;
+        transition: all 0.5s ease;
+    }
+    .mobile-menu {
+        margin-top: 0px;
+        border-bottom-right-radius: 30%;
+    }
+    .nav-links li {
+        margin: 30px auto;
+    }
+    /* About */
+    .title {
+        display: block;
+        align-self: center;
+    }
+    .row {
+        flex-direction: column;
+    }
+    .row .column {
+        margin: 20px auto;
+    }
+    .column img {
+        max-width: 90%;
+    }
+    /* Animations */
+    img {
+        transition: transform .3s ease;
+    }
+    img:hover {
+        transform: scale(1.1);
+    }
+    .ctn:hover {
+        background: whitesmoke;
+        color: black;
+        box-shadow: 2px 2px 5px #00000056;
+    }
 }
-.social a:hover {
-    transform: scale(1.3);
-    transition: .3s;
-}
-.end {
-    position: absolute;
-    color: black;
-    bottom: 35px;
-    font-size: 14px;
-}
+
