--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,8 @@ header {
     justify-content: center;
 }
 .content {
-    position: absolute;
-    top: 50%;
-    left: 8%;
-    transform: translateY(-50%);
+    margin-bottom: 150px;
+    text-align: center;
 }
 h1 {
     color: beige;
@@ -161,12 +159,16 @@ p {
 }
 .service .column {
     justify-content: space-around;
-    background: rgb(204, 187, 165);
+    background: beige;
     padding: 25px 24px;
     border: 2px solid transparent;
     border-radius: 15px;
     gap: 15px;
     margin: 12px;
+}
+.service .column img {
+    width: 50%;
+    height: auto;
 }
 .service h4 {
     color: black;
@@ -175,15 +177,12 @@ p {
     letter-spacing: 5px;
 }
 
+
 /* Contact */
 .contact {
     background-color: cornsilk;
     width: 100%;
     padding: 100px 0;
-}
-.social-image {
-    border: circle;
-    
 }
 
 /* Footer */
@@ -197,7 +196,7 @@ p {
 }
 .footer p {
     color: whitesmoke;
-    margin: 20px auto;
+    margin: 15px auto;
 }
 
 @media only screen and (max-width:850px) {
@@ -217,10 +216,11 @@ p {
         width: 100%;
         height: 100vh;
         justify-content: center;
-        background: #484872;
+        background: dimgrey;
         margin-top: -900px;
         transition: all 0.5s ease;
     }
+    
     .mobile-menu {
         margin-top: 0px;
         border-bottom-right-radius: 30%;
@@ -241,6 +241,11 @@ p {
     }
     .column img {
         max-width: 90%;
+    }
+    p {
+        padding: 10px;
+        font-size: 13px;
+        font-weight: bold;
     }
     /* Animations */
     img {
